--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dilsha Prathibha | Portfolio</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Dilsha Prathibha | Software Engineer Portfolio</title>
+  <meta name="title" content="Dilsha Prathibha | Software Engineer Portfolio" />
+  <meta name="description" content="Portfolio of Dilsha Prathibha — Software Engineering undergraduate specializing in full-stack web & mobile development. Explore projects built with React, Node.js, Kotlin, and more." />
+  <meta name="author" content="Dilsha Prathibha" />
+  <meta name="keywords" content="Dilsha Prathibha, software engineer, portfolio, full-stack developer, mobile developer, React, Node.js, Kotlin" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dilshaprathibha.github.io/Portfolio/" />
+  <meta property="og:title" content="Dilsha Prathibha | Software Engineer Portfolio" />
+  <meta property="og:description" content="Software Engineering undergraduate specializing in full-stack web & mobile development. Explore projects built with React, Node.js, Kotlin, and more." />
+  <meta property="og:image" content="https://dilshaprathibha.github.io/Portfolio/images/profile.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://dilshaprathibha.github.io/Portfolio/" />
+  <meta property="twitter:title" content="Dilsha Prathibha | Software Engineer Portfolio" />
+  <meta property="twitter:description" content="Software Engineering undergraduate specializing in full-stack web & mobile development. Explore projects built with React, Node.js, Kotlin, and more." />
+  <meta property="twitter:image" content="https://dilshaprathibha.github.io/Portfolio/images/profile.png" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#7c3aed" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
